--- a/datePicker.html
+++ b/datePicker.html
@@ -32,9 +32,44 @@
         var endDate = document.getElementById("end-date").value;
 
         google.script.run.makeSheet(startDate, endDate); // 開始日と終了日を関数に渡す
+        // google.script.host.close(); // ダイアログを閉じる
+
+        google.script.run.withSuccessHandler(downloadComplete).exportAttendanceRecordFile(startDate, endDate);
+
+      }
+
+      function downloadExcel() {
+        google.script.run.withSuccessHandler(downloadComplete).downloadExcelFile();
+      }
+
+      // ダウンロードが完了した後の処理
+      function downloadComplete(data) {
+        console.log("downloadComplete")
+        console.log(data)
+        var fileName = data.fileName;
+        var contentType = data.contentType;
+        var base64Data = data.base64Data;
+        
+        var byteCharacters = atob(base64Data);
+        var byteNumbers = new Array(byteCharacters.length);
+        for (var i = 0; i < byteCharacters.length; i++) {
+          byteNumbers[i] = byteCharacters.charCodeAt(i);
+        }
+        var byteArray = new Uint8Array(byteNumbers);
+        
+        var blob = new Blob([byteArray], {type: contentType});
+        var downloadLink = document.createElement('a');
+        downloadLink.href = window.URL.createObjectURL(blob);
+        downloadLink.download = fileName;
+        document.body.appendChild(downloadLink);
+        downloadLink.click();
+        document.body.removeChild(downloadLink);
+
         google.script.host.close(); // ダイアログを閉じる
 
       }
+
+
     </script>
   </head>
   <body>
@@ -61,5 +96,6 @@
     <input type="date" id="end-date" oninput="selectDateRange()">
     <br>
     <button id="select-button" onclick="sendDate()" disabled>出力</button>
+
   </body>
 </html>
