--- a/Download.html
+++ b/Download.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base target="_top">
+    <base target="_top" />
   </head>
   <body>
     <button onclick="downloadExcel()">Excelファイルをダウンロード</button>
 
     <script>
-
       function downloadExcel() {
-        google.script.run.withSuccessHandler(downloadComplete).downloadExcelFile();
+        google.script.run
+          .withSuccessHandler(downloadComplete)
+          .downloadExcelFile();
       }
 
       // ダウンロードが完了した後の処理
@@ -17,15 +18,15 @@
         var fileName = data.fileName;
         var contentType = data.contentType;
         var base64Data = data.base64Data;
-        
+
         var byteCharacters = atob(base64Data);
         var byteNumbers = new Array(byteCharacters.length);
         for (var i = 0; i < byteCharacters.length; i++) {
           byteNumbers[i] = byteCharacters.charCodeAt(i);
         }
         var byteArray = new Uint8Array(byteNumbers);
-        
-        var blob = new Blob([byteArray], {type: contentType});
+
+        var blob = new Blob([byteArray], { type: contentType });
         var downloadLink = document.createElement('a');
         downloadLink.href = window.URL.createObjectURL(blob);
         downloadLink.download = fileName;
